--- a/Archivo-2.html
+++ b/Archivo-2.html
@@ -23,6 +23,7 @@
 </form>
 
 
+
 *CSS* BUTTON
 /* Bordered form */
 form {
@@ -60,4 +61,41 @@ button:hover {
   width: auto;
   padding: 10px 18px;
   background-color: #f44336;
+}
+
+
+
+*CSS* IMG
+/* Center the avatar image inside this container */
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+/* Avatar image */
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+/* Add padding to containers */
+.container {
+  padding: 16px;
+}
+
+/* The "Forgot password" text */
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+    display: block;
+    float: none;
+  }
+  .cancelbtn {
+    width: 100%;
+  }
 }
